# soccer_xg

./: .bumpversion.cfg  .gitignore  .travis.yml  Makefile  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
notebooks/: 1-load-and-convert-statsbomb-data.ipynb  1-load-and-convert-wyscout-data.ipynb  2-basic-usage.ipynb  3-computing-and-storing-features.ipynb  4-creating-custom-xg-pipelines.ipynb
soccer_xg/: __init__.py  api.py  attributes.py  calibration.py  features.py  metrics.py  utils.py  visualisation.py  xg.py
soccer_xg/data/: base.py  hdf.py  sql.py
soccer_xg/ml/: logreg.py  mlp.py  pipeline.py  preprocessing.py  tree_based_LR.py  xgboost.py
soccer_xg/models/: openplay_logreg_advanced  openplay_logreg_basic  openplay_xgboost_advanced  openplay_xgboost_basic
tests/: conftest.py  fixtures.py  test_api.py  test_attributes.py  test_data.py  test_features.py  test_metrics.py  test_xg.py
tests/data/: download.py
