[tool.poetry]
name = "soccer_xg"
version = "0.0.1"
description = "Train and analyse xG models on soccer event stream data"
authors = ["Pieter Robberechts <pieter.robberechts@kuleuven.be>"]
license = "Apache Software License (http://www.apache.org/licenses/LICENSE-2.0)"
readme = 'README.md'
repository = "https://github.com/ML-KULeuven/soccer_xg"
homepage = "https://pypi.org/project/soccer_xg"
keywords = [
  "expected goals", "xG",
  "soccer", "football",
  "event stream data",
  "sports analytics",
  "Statsbomb", "Opta", "Wyscout"
]
classifiers=[
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
socceraction = {version = "^1.4.0", extras = ["statsbomb"]}
tqdm = "^4.65.0"
fuzzywuzzy = {version = "^0.18.0", extras = ["speedup"]}
numpy = "^1.24.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
betacal = "^1.1.0"
# dask = {version = "^2022.4.1", extras = ["array,distributed,dataframe"], optional = true}
# dask-ml = {version = "^2022.1.22", optional = true}
# asyncssh = {version = "^2.10.1", optional = true}
# paramiko = {version = "^2.10.4", optional = true}
inflect = "^6.0.2"  # fix for missing dependency in statsbombpy
joblib = "^1.2.0"  # fix for missing dependency in statsbombpy
tables = "^3.8.0"
xgboost = "^1.7.4"

[tool.poetry.extras]
# dask = ["dask", "dask_ml", "asyncssh", "paramiko"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
pre-commit = "^3.2.0"
isort = "^5.12.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"
coverage = {version = "^7.2.2", extras = ["toml"]}
bumpversion = "^0.6.0"
unify = "^0.5"

[tool.isort]
profile = "black"
src_paths = ["soccer_xg", "tests"]
balanced_wrapping = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = ["soccer_xg", "tests"]
line_length = 79
multi_line_output = 3

[tool.black]
line-length = 99
target-version = ['py38']
skip-string-normalization = 1
include = '\.pyi?$'

[tool.coverage.paths]
source = ["soccer_xg", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["soccer_xg"]

[tool.coverage.report]
show_missing = true
ignore_errors = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
